# load

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: zipf_bench.rs
src/: lib.rs
src/zipf/: README.md  errors.rs  formulas.md  iterator.rs  mod.rs  zipf.rs
